# secure_element_access

./: .gitignore  CMakeLists.txt  README.md  xc32.cmake
apps/rtos/freertos/secure_element_access/firmware/sam_e54_xpro.X/nbproject/: Makefile-local-sam_e54_xpro.mk  Makefile-sam_e54_xpro.mk
apps/rtos/freertos/secure_element_access/firmware/src/: CLI_command_cryptoauthlib.c  CLI_command_cryptoauthlib.h  CLI_task.c  CLI_task.h
apps/rtos/freertos/secure_element_access/firmware/src/FreeRTOS-Plus-CLI/: FreeRTOS_CLI.c
apps/rtos/freertos/secure_element_access/firmware/src/config/sam_e54_xpro/: interrupts.c
apps/rtos/freertos/secure_element_access/firmware/src/config/sam_e54_xpro/peripheral/sercom/usart/: plib_sercom2_usart.c
docs/: development_environment_guide.md  firmware_build_guide.md  hardware_setup_guide.md  secure_element_access_guide.md
docs/samd51_mcu/: README.md  development_environment_guide.md  secure_element_access_guide.md
docs/samd51_micromod/: README.md  development_environment_guide.md  firmware_build_guide.md
firmware/src/: CLI_command_cryptoauthlib.c  CLI_task.c  atca_cert_chain.c  atca_cert_chain.h
firmware/src/config/sam_e54_xpro/: definitions.h  initialization.c
firmware/src/config/sam_e54_xpro/peripheral/port/: plib_port.c
firmware/src/config/samd51_mcu/: definitions.h  device.h  initialization.c  interrupts.c  tasks.c
firmware/src/config/samd51_mcu/bsp/: bsp.c  bsp.h
firmware/src/config/samd51_mcu/peripheral/clock/: plib_clock.c
firmware/src/config/samd51_mcu/peripheral/nvic/: plib_nvic.c
firmware/src/config/samd51_mcu/peripheral/port/: plib_port.c  plib_port.h
firmware/src/config/samd51_mcu/peripheral/sercom/i2c_master/: plib_sercom1_i2c_master.c  plib_sercom2_i2c_master.c
firmware/src/config/samd51_mcu/peripheral/sercom/usart/: plib_sercom0_usart.c
firmware/src/config/samd51_micromod/: definitions.h  initialization.c  interrupts.c
firmware/src/config/samd51_micromod/bsp/: bsp.c  bsp.h
firmware/src/config/samd51_micromod/peripheral/clock/: plib_clock.c
firmware/src/config/samd51_micromod/peripheral/eic/: plib_eic.c
firmware/src/config/samd51_micromod/peripheral/nvic/: plib_nvic.c
firmware/src/config/samd51_micromod/peripheral/port/: plib_port.c  plib_port.h
firmware/src/config/samd51_micromod/peripheral/sercom/i2c_master/: plib_sercom3_i2c_master.c
firmware/src/config/samd51_micromod/peripheral/sercom/usart/: plib_sercom5_usart.c
firmware/src/config/same54_xpro/bsp/: bsp.c  bsp.h
firmware/src/config/same54_xpro/peripheral/clock/: plib_clock.c
firmware/src/config/same54_xpro/peripheral/nvic/: plib_nvic.c
firmware/src/packs/ATSAMD51J20A_DFP/include/: atsamd51j20a.h  device.h
firmware/src/packs/ATSAMD51J20A_DFP/include/component/: ac.h  adc.h  aes.h  ccl.h  cmcc.h  dac.h  dmac.h  dsu.h  eic.h  evsys.h  freqm.h  gclk.h  hmatrixb.h  i2s.h  icm.h  mclk.h  nvmctrl.h  osc32kctrl.h  oscctrl.h  pac.h  pcc.h  pdec.h  pm.h  port.h  pukcc.h  qspi.h  ramecc.h  rstc.h  rtc.h  sdhc.h  sercom.h  supc.h  tc.h  tcc.h  trng.h  usb.h  wdt.h
firmware/src/packs/ATSAMD51J20A_DFP/include/pio/: samd51j20a.h
python/: command.py  device.py  gui.py  gui_read.pyw  gui_utils.py  gui_write.py  gui_write.pyw  ihex2bin.py
